Add support for new font awesome version

--- a/templates/index_helper.tmpl
+++ b/templates/index_helper.tmpl
@@ -5,12 +5,12 @@
         <div class="pager">
         %if prevlink:
             <p class="previous">
-                <a href="${prevlink}" rel="prev">Newer<i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                <a href="${prevlink}" rel="prev">Newer<i class="fas fa-angle-double-right" aria-hidden="true"></i></a>
             </p>
         %endif
         %if nextlink:
             <p class="next">
-                <a href="${nextlink}" rel="next"><i class="fa fa-angle-double-left" aria-hidden="true"></i> Older</a>
+                <a href="${nextlink}" rel="next"><i class="fas fa-angle-double-left" aria-hidden="true"></i> Older</a>
             </p>
         %endif
         </div>
