--- a/templates/post_helper.tmpl
+++ b/templates/post_helper.tmpl
@@ -15,7 +15,7 @@
         <ul itemprop="keywords" class="tags">
         %for tag in post.tags:
           % if tag not in hidden_tags:
-            <li><a class="fa fa-tag tag p-category" aria-hidden="true" id="unq" href="${_link('tag', tag)}" rel="tag"> ${tag|h}</a></li>
+            <li><a class="tag p-category" aria-hidden="true" id="unq" href="${_link('tag', tag)}" rel="tag"><i class="fas fa-tag"></i> ${tag|h}</a></li>
           % endif
         %endfor
         </ul>
@@ -27,12 +27,12 @@
         <div class="pager hidden-print">
         %if post.prev_post:
             <p class="previous">
-                <a href="${post.prev_post.permalink()}" rel="prev" title="${post.prev_post.title()|h}"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Previous</a>
+                <a href="${post.prev_post.permalink()}" rel="prev" title="${post.prev_post.title()|h}"><i class="fas fa-arrow-circle-left" aria-hidden="true"></i> Previous</a>
             </p>
         %endif
         %if post.next_post:
             <p class="next">
-                <a href="${post.next_post.permalink()}" rel="next" title="${post.next_post.title()|h}">Next <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+                <a href="${post.next_post.permalink()}" rel="next" title="${post.next_post.title()|h}">Next <i class="fas fa-arrow-circle-right" aria-hidden="true"></i></a>
             </p>
         %endif
         </div>
