--- a/templates/index_helper.tmpl
+++ b/templates/index_helper.tmpl
@@ -19,7 +19,7 @@
 </%def>
 
 <%def name="mathjax_script(posts)">
-    %if any(post.is_mathjax for post in posts):
+    %if any(post.has_math for post in posts):
         %if use_katex:
             <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/contrib/auto-render.min.js"></script>
