--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -61,8 +61,8 @@ ${template_hooks['extra_head']()}
     ${base.late_load_js()}
     <!-- fancy dates -->
     <script>
-    moment.locale("${momentjs_locales[lang]}");
-    fancydates(${date_fanciness}, ${js_date_format});
+    luxon.Settings.defaultLocale = "${luxon_locales[lang]}";
+    fancydates(${date_fanciness}, ${luxon_date_format});
     </script>
     <!-- end fancy dates -->
     <%block name="extra_js"></%block>
