--- a/templates/base_helper.tmpl
+++ b/templates/base_helper.tmpl
@@ -74,6 +74,7 @@ lang="${lang}">
         %else:
             <script src="/assets/js/jquery.min.js"></script>
 	%endif
+        <script src="/assets/js/luxon.min.js"></script>
         <script src="/assets/js/moment-with-locales.min.js"></script>
         <script src="/assets/js/fancydates.js"></script>
     %endif
